tests/baselines/reference/getterMissingReturnError.errors.txt
==== tests/cases/compiler/getterMissingReturnError.ts (1 errors) ====
    class test {
        public get p2(){
                   ~~
!!! error TS2126: Getters must return a value.
    
        }
    }
    